# xyz_gazebo

install/: local_setup.sh  setup.sh
install/goal/lib/goal/: goal_navigator  pose_estimator  user_input
install/goal/share/goal/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/goal/share/goal/launch/: multi_node.launch.py
install/my_robot_description/share/my_robot_description/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
install/my_robot_description/share/my_robot_description/config/: lidar.rviz  nav2_params.yaml  nav2_params_vec.yaml
install/my_robot_description/share/my_robot_description/launch/: cartographer.launch.py  launch_sim.launch.py  upload.launch.xml
install/my_robot_description/share/my_robot_description/models/simmap/: model.config  model.sdf
install/my_robot_description/share/my_robot_description/rviz/: test_gazebo.rviz  urdf_config.rviz
install/my_robot_description/share/my_robot_description/urdf/: robot.urdf.xacro  robot_core.xacro
install/my_robot_description/share/my_robot_description/worlds/: model.sdf  traffic_world.model
install/my_robot_description/share/my_robot_description/worlds/RealMap2/: model.sdf
install/my_robot_description/share/my_robot_description/worlds/huksberry/: huksberry.sdf  model.config
install/my_robot_description/share/my_robot_description/worlds/huksberry/meshes/: huksberry.dae
install/my_robot_description/share/my_robot_description/worlds/realMap/: model.config  model.sdf
install/my_robot_description/share/my_robot_description/worlds/simmap_world2/: model.config  model.sdf
install/my_robot_navigation/share/my_robot_navigation/: package.sh
install/my_robot_navigation/share/my_robot_navigation/behavior_trees/: navigate_through_poses_w_replanning_and_recovery.xml  navigate_to_pose_w_replanning_and_recovery.xml
install/my_robot_navigation/share/my_robot_navigation/launch/: bringup_launch.xml
install/my_robot_navigation/share/my_robot_navigation/maps/: realMap.pgm
install/my_robot_navigation/share/my_robot_navigation/publish/: nav2_mygoal_publisher.py
log/: latest_build
src/goal/: setup.py
src/goal/goal/: goal_navigator_node.py  pose_estimator_node.py
src/my_robot_description/: CMakeLists.txt  kolise-storagy_src_storagy_sim_worlds_mememan_world.model at main · addinedu-advance-3rd_kolise-storagy.html
src/my_robot_description/config/: mapper_params.yaml  with_robot.world
src/my_robot_description/launch/: display.launch.py  map_building.launch.py  upload.launch.py
src/my_robot_description/src/animated_box_plugin/: animated_box_2.cc  animated_box_3.cc  animated_box_4.cc  integrated_main.cc
src/my_robot_description/urdf/: lidar.xacro
src/my_robot_description/worlds/: RealrealMap  animated_box.world  realMap.world  simmap_world.model
src/my_robot_description/worlds/RealMap2/: model.config
src/my_robot_description/worlds/huksberry/: model.sdf
src/my_robot_navigation/: CMakeLists.txt
src/my_robot_navigation/config/: nav2_params copy.yaml  nav2_params.yaml
src/my_robot_navigation/maps/: realMap.yaml
